Fixed up code, have to to some tests on other screens

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
     <a href="#mainContent" class="skipLink">Skip to main content</a>
     <header class="header header--other">
         <nav class="nav nav--other wrapper">
+
             <input type="checkbox" id="toggle" name="toggle" class="toggle">
 
             <ul class="nav__mobile">
@@ -24,21 +25,31 @@
                     </label>
                 </li>
                 <li>
-                    <a href="./index.html" class="nav__mobile-link">Home</a>
+                    <a href="./index.html" class="nav__mobile-link">
+                        Home
+                    </a>
                 </li>
                 <li>
-                    <a href="./index.html#about" class="nav__mobile-link">About</a>
+                    <a href="./index.html#about" class="nav__mobile-link">
+                        About
+                    </a>
                 </li>
                 <li>
-                    <a href="./blog.html" class="nav__mobile-link">Blog</a>
+                    <a href="./blog.html" class="nav__mobile-link">
+                        Blog
+                    </a>
                 </li>
                 <li>
-                    <a href="./contact.html" class="nav__mobile-link">Contact</a>
+                    <a href="./contact.html" class="nav__mobile-link">
+                        Contact
+                    </a>
                 </li>
             </ul>
 
             <h2 class="font2 font2--mobile">
-                <a href="./index.html" class="nav__mobile-head">Harper</a>
+                <a href="./index.html" class="nav__mobile-head">
+                    Harper
+                </a>
             </h2>
 
             <label for="toggle" class="nav__hamburger">
@@ -46,27 +57,39 @@
             </label>
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="./index.html" class="nav__link">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="./index.html#about" class="nav__link">About</a>
-                </li>
-                <li class="nav__item">
                     <a href="./index.html" class="nav__link">
-                        <h2 class=" font2 font2--nav">Harper</h2>
+                        Home
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./blog.html" class="nav__link nav__link--active">Blog</a>
+                    <a href="./index.html#about" class="nav__link">
+                        About
+                    </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contact.html" class="nav__link">Contact</a>
+                    <a href="./index.html" class="nav__link">
+                        <h2 class=" font2 font2--nav">
+                            Harper
+                        </h2>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link nav__link--active">
+                        Blog
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link">
+                        Contact
+                    </a>
                 </li>
             </ul>
         </nav>
         <div class="header__other-container header__other-container--blog">
             <div class="wrapper header__other-text-container">
-                <h1 class="font1 header__other-text">Blog</h1>
+                <h1 class="font1 header__other-text">
+                    Blog
+                </h1>
             </div>
         </div>
     </header>
@@ -76,9 +99,12 @@
                 <aside class="blog__aside">
                     <div class="blog__aside-box">
                         <div class="blog__aside-img-container">
-                            <img src="./img/blog-image-2.jpg" alt="Woman in pink coat lying on a carpet next to a blue wall" class="blog__aside-img">
+                            <img src="./img/blog-image-2.jpg" alt="Woman in pink coat lying on a carpet next to a blue wall"
+                                class="blog__aside-img">
                         </div>
-                        <h4 class="font4">About Harper</h4>
+                        <h4 class="font4">
+                            About Harper
+                        </h4>
                         <p class="blog__aside-text">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, cupiditate aspernatur harum
                             veritatis possimus provident.
@@ -86,33 +112,45 @@
 
                     </div>
                     <div class="blog__aside-box">
-                        <h4 class="font4">Recent Posts</h4>
+                        <h4 class="font4">
+                            Recent Posts
+                        </h4>
 
                         <ul class="blog__aside-list">
                             <li class="blog__aside-post">
-                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">
+                                    Lorem ipsum dolor sit.
+                                </a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">
+                                    Lorem ipsum dolor sit.
+                                </a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">
+                                    Lorem ipsum dolor sit.
+                                </a>
                             </li>
                             <li class="blog__aside-post">
-                                <a href="#" class="blog__aside-link">Lorem ipsum dolor sit.</a>
+                                <a href="#" class="blog__aside-link">
+                                    Lorem ipsum dolor sit.
+                                </a>
                             </li>
                         </ul>
-
                     </div>
 
                 </aside>
                 <div class="blog__post-container">
                     <div class="blog__post-box blog__post-box--border">
-                        <h4 class="font4">My favourite travel destinations</h4>
+                        <h4 class="font4">
+                            My favourite travel destinations
+                        </h4>
 
                         <p class="blog__post-text">
                             Monday October 8th, 2018 by Harper
                         </p>
+
                         <p class="blog__post-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, asperiores nam.
                             Cupiditate ut nulla repellat mollitia omnis molestiae cum laborum perferendis explicabo
@@ -126,6 +164,7 @@
                             eum iste cupiditate voluptas laudantium commodi, harum nesciunt eveniet iure dolorem
                             numquam doloremque ipsa quibusdam sunt quia officia impedit autem. Architecto eos quos a!
                         </p>
+
                         <p class="blog__post-text">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos omnis voluptates laborum
                             quaerat consectetur fuga consequuntur ipsa quidem, voluptatem eaque, recusandae adipisci
@@ -145,6 +184,7 @@
                             voluptates amet praesentium et. Dolor deserunt quam eum. Quisquam obcaecati enim magni
                             laborum beatae quos laboriosam sint pariatur optio!
                         </p>
+
                         <p class="blog__post-text">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid dolores, delectus labore
                             placeat, maxime iste commodi, asperiores repudiandae corporis eum eligendi natus minima
@@ -152,6 +192,7 @@
                             sapiente tempore fugiat. Magni molestiae quidem fuga explicabo, dolores alias repellat
                             quam!
                         </p>
+
                         <p class="blog__post-text">
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis fuga perferendis,
                             molestiae optio illum impedit consectetur inventore nihil eveniet ducimus provident nobis,
@@ -164,6 +205,7 @@
                             Eveniet eum praesentium fuga, quos optio dolorem molestias tenetur consectetur ratione
                             impedit aliquam quam quasi minima totam nisi illum excepturi corrupti facere!
                         </p>
+
                     </div>
                     <div class="blog__post-box blog__post-box--author clearfix">
                         <div class="blog__post-img-container">
@@ -172,7 +214,9 @@
 
                         <p class="blog__post-text blog__post-text--author">
                             <span class="blog__post-text-date ">
-                                <a href="#" class="blog__post-text-link">Tuesday October 9th, 2018 by Maggie</a> 
+                                <a href="#" class="blog__post-text-link">
+                                    Tuesday October 9th, 2018 by Maggie
+                                </a>
                             </span>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
@@ -187,25 +231,32 @@
 
                         <p class="blog__post-text blog__post-text--author">
                             <span class="blog__post-text-date ">
-                                <a href="#" class="blog__post-text-link">Wednesday October 10th, 2018 by Daisy</a>
-                                </span>
+                                <a href="#" class="blog__post-text-link">
+                                    Wednesday October 10th, 2018 by Daisy
+                                </a>
+                            </span>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut iste earum nisi ad, sit
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
                             dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
                         </p>
                     </div>
                     <div class="blog__post-box blog__post-box--form">
-
                         <form action="#" method="POST" class="blog__post-form">
-                            <label class="visuallyhidden" for="email">Name</label>
+                            <label class="visuallyhidden" for="email">
+                                Name
+                            </label>
                             <input type="text" name="name" id="name" placeholder="Name" class="contact__info contact__item"
                                 required>
 
-                            <label class="visuallyhidden" for="email">Email</label>
+                            <label class="visuallyhidden" for="email">
+                                Email
+                            </label>
                             <input type="email" name="email" id="email" placeholder="Email Address" class="contact__info contact__item"
                                 required>
 
-                            <label class="visuallyhidden" for="email">Message</label>
+                            <label class="visuallyhidden" for="email">
+                                Message
+                            </label>
                             <textarea name="message" id="message" placeholder="Comment" class="contact__message contact__item"></textarea>
 
                             <input type="submit" value="Post Comment" class="contact__submit contact__item">
