--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,16 @@
 </head>
 
 <body>
-    <a href="#mainContent" class="skipLink">Skip to main content</a>
+    <!-- Skip Link -->
+    <a href="#mainContent" class="skipLink">
+        Skip to main content
+    </a>
     <header class="header header--other">
+        <!-- Top Nav section -->
         <nav class="nav nav--other wrapper">
             <input type="checkbox" id="toggle" name="toggle" class="toggle">
 
+            <!-- Mobile navigation -->
             <ul class="nav__mobile">
                 <li>
                     <label for="toggle" class="nav__mobile-close">
@@ -25,21 +30,31 @@
                     </label>
                 </li>
                 <li>
-                    <a href="./index.html" class="nav__mobile-link">Home</a>
+                    <a href="./index.html" class="nav__mobile-link">
+                        Home
+                    </a>
                 </li>
                 <li>
-                    <a href="./index.html#about" class="nav__mobile-link">About</a>
+                    <a href="./index.html#about" class="nav__mobile-link">
+                        About
+                    </a>
                 </li>
                 <li>
-                    <a href="./blog.html" class="nav__mobile-link">Blog</a>
+                    <a href="./blog.html" class="nav__mobile-link">
+                        Blog
+                    </a>
                 </li>
                 <li>
-                    <a href="./contact.html" class="nav__mobile-link">Contact</a>
+                    <a href="./contact.html" class="nav__mobile-link">
+                        Contact
+                    </a>
                 </li>
             </ul>
 
             <h2 class="font2 font2--mobile">
-                <a href="./index.html" class="nav__mobile-head">Harper</a>
+                <a href="./index.html" class="nav__mobile-head">
+                    Harper
+                </a>
             </h2>
 
             <label for="toggle" class="nav__hamburger">
@@ -47,81 +62,119 @@
             </label>
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="./index.html" class="nav__link">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="./index.html#about" class="nav__link">About</a>
-                </li>
-                <li class="nav__item">
                     <a href="./index.html" class="nav__link">
-                        <h2 class="font2 font2--nav">Harper</h2>
+                        Home
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./blog.html" class="nav__link">Blog</a>
+                    <a href="./index.html#about" class="nav__link">
+                        About
+                    </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contact.html" class="nav__link nav__link--active">Contact</a>
+                    <a href="./index.html" class="nav__link">
+                        <h2 class="font2 font2--nav">
+                            Harper
+                        </h2>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link">
+                        Blog
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link nav__link--active">
+                        Contact
+                    </a>
                 </li>
             </ul>
         </nav>
         <div class="header__other-container header__other-container--contact">
             <div class="wrapper header__other-text-container">
-                <h1 class="font1 header__other-text">Contact Me</h1>
+                <h1 class="font1 header__other-text">
+                    Contact Me
+                </h1>
             </div>
         </div>
     </header>
     <main id="mainContent">
         <section class="section contact">
             <div class="wrapper contact__container">
+                <!-- Aside -->
                 <aside class="contact__aside">
                     <ul class="contact__social-media">
                         <li class="contact__sm-item">
                             <a href="http://facebook.com" class="contact__sm-link">
                                 <i class="fab fa-facebook-f"></i>
-                                <span class="visuallyhidden">Facebook</span>
+                                <span class="visuallyhidden">
+                                    Facebook
+                                </span>
                             </a>
                         </li>
                         <li class="contact__sm-item">
                             <a href="http://twitter.com" class="contact__sm-link">
                                 <i class="fab fa-twitter"></i>
-                                <span class="visuallyhidden">Twitter</span>
+                                <span class="visuallyhidden">
+                                    Twitter
+                                </span>
                             </a>
                         </li>
                         <li class="contact__sm-item">
                             <a href="http://linkedin.com" class="contact__sm-link">
                                 <i class="fab fa-linkedin-in"></i>
-                                <span class="visuallyhidden">LinkedIn</span>
+                                <span class="visuallyhidden">
+                                    LinkedIn
+                                </span>
                             </a>
                         </li>
                         <li class="contact__sm-item">
                             <a href="http://instagram.com" class="contact__sm-link">
                                 <i class="fab fa-instagram"></i>
-                                <span class="visuallyhidden">Instagram</span>
+                                <span class="visuallyhidden">
+                                    Instagram
+                                </span>
                             </a>
                         </li>
                     </ul>
                     <p class="contact__email-container">
-                        <a href="mailto:info@email.com" class="contact__email">info@email.com</a>
+                        <a href="mailto:info@email.com" class="contact__email">
+                            info@email.com
+                        </a>
                     </p>
                     <p class="contact__address">
-                        <span class="contact__address-line">123 - 456 - 7890</span>
-                        <span class="contact__address-line">123 Queen Street West, Unit 10</span>
-                        <span class="contact__address-line">Toronto, Ontario</span>
-                        <span class="contact__address-line">M5V2D5</span>
+                        <span class="contact__address-line">
+                            123 - 456 - 7890
+                        </span>
+                        <span class="contact__address-line">
+                            123 Queen Street West, Unit 10
+                        </span>
+                        <span class="contact__address-line">
+                            Toronto, Ontario
+                        </span>
+                        <span class="contact__address-line">
+                            M5V2D5
+                        </span>
                     </p>
 
                 </aside>
+                <!-- Form section -->
                 <form action="#" method="POST" class="contact__form">
-                    <label class="visuallyhidden" for="email">Name</label>
+                    <label class="visuallyhidden" for="email">
+                        Name
+                    </label>
                     <input type="text" name="name" id="name" placeholder="Name" class="contact__info contact__item"
                         required>
 
-                    <label class="visuallyhidden" for="email">Email</label>
+                    <label class="visuallyhidden" for="email">
+                        Email
+                    </label>
                     <input type="email" name="email" id="email" placeholder="Email Address" class="contact__info contact__item"
                         required>
 
-                    <label class="visuallyhidden" for="email">Message</label>
+                    <label class="visuallyhidden" for="email">
+                        Message
+                    </label>
                     <textarea name="message" id="message" placeholder="Message" class="contact__message contact__item"></textarea>
 
                     <input type="submit" value="Submit" class="contact__submit contact__item">
