--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 </head>
 
 <body>
-    <a href="#mainContent" class="skipLink">Skip to main content</a>
+    <!-- Skip link -->
+    <a href="#mainContent" class="skipLink">
+        Skip to main content
+    </a>
     <header class="header">
+        <!-- Top Nav section -->
         <nav class="nav wrapper">
-            
+            <!-- Checkbox to use with mobile menu -->
             <input type="checkbox" id="toggle" name="toggle" class="toggle">
-
+            <!-- Mobile naviagtion menu -->
             <ul class="nav__mobile">
                 <li>
                     <label for="toggle" class="nav__mobile-close">
@@ -26,79 +30,117 @@
                     </label>
                 </li>
                 <li>
-                    <a href="./index.html" class="nav__mobile-link">Home</a>
+                    <a href="./index.html" class="nav__mobile-link">
+                        Home
+                    </a>
                 </li>
                 <li>
-                    <a href="./index.html#about" class="nav__mobile-link">About</a>
+                    <a href="./index.html#about" class="nav__mobile-link">
+                        About
+                    </a>
                 </li>
                 <li>
-                    <a href="./blog.html" class="nav__mobile-link">Blog</a>
+                    <a href="./blog.html" class="nav__mobile-link">
+                        Blog
+                    </a>
                 </li>
                 <li>
-                    <a href="./contact.html" class="nav__mobile-link">Contact</a>
+                    <a href="./contact.html" class="nav__mobile-link">
+                        Contact
+                    </a>
                 </li>
             </ul>
 
+            <!-- Heading for mobile mode -->
             <h2 class="font2 font2--mobile">
-                <a href="./index.html" class="nav__mobile-head">Harper</a>
+                <a href="./index.html" class="nav__mobile-head">
+                    Harper
+                </a>
             </h2>
-
+            <!-- Hamburher Icon -->
             <label for="toggle" class="nav__hamburger">
                 <i class="fas fa-bars"></i>
             </label>
 
+            <!-- Desktop and Tablet navigation menu -->
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="./index.html" class="nav__link nav__link--active">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#about" class="nav__link">About</a>
-                </li>
-                <li class="nav__item">
-                    <a href="./index.html" class="nav__link">
-                        <h2 class="font2 font2--nav">Harper</h2>
+                    <a href="./index.html" class="nav__link nav__link--active">
+                        Home
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./blog.html" class="nav__link">Blog</a>
+                    <a href="#about" class="nav__link">
+                        About
+                    </a>
                 </li>
                 <li class="nav__item">
-                    <a href="./contact.html" class="nav__link">Contact</a>
+                    <a href="./index.html" class="nav__link">
+                        <h2 class="font2 font2--nav">
+                            Harper
+                        </h2>
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./blog.html" class="nav__link">
+                        Blog
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="./contact.html" class="nav__link">
+                        Contact
+                    </a>
                 </li>
             </ul>
         </nav>
+
         <div class="header__container1 wrapper">
             <div class="header__text-container">
-                <h1 class="font1 font1--main">Harper</h1>
+                <h1 class="font1 font1--main">
+                    Harper
+                </h1>
             </div>
         </div>
         <div class="header__container2 wrapper">
+            <!-- Header Image container -->
             <div class="header__img-container">
             </div>
         </div>
     </header>
     <main id="mainContent">
+        <!-- Who is Harper section -->
         <section class="section whoisharper">
             <div class="whoisharper__container wrapper">
                 <div class="whoisharper__text-container">
-                    <h2 class="font2">Who's Harper</h2>
-                    <p class="section__text">Lorem ipsum dolor sit amet consectetur, adip elit. Veniam expedita
+                    <h2 class="font2">
+                        Who's Harper
+                    </h2>
+                    <p class="section__text">
+                        Lorem ipsum dolor sit amet consectetur, adip elit. Veniam expedita
                         obcaecati blanditiis. Sit ullam aut praesentium optio et ducimus libero quos aliquid odio cum.
-                        Temporibus corrupti maxime voluptates, neque nemo excepturi suscipit laudantium officiis?</p>
-                    <a href="#" class="section__btn">Find Out More</a>
+                        Temporibus corrupti maxime voluptates, neque nemo excepturi suscipit laudantium officiis?
+                    </p>
+                    <a href="#" class="section__btn">
+                        Find Out More
+                    </a>
                 </div>
             </div>
         </section>
 
+        <!-- Building pic section -->
         <section class="building-pic">
         </section>
 
+        <!-- Icon links section -->
         <section class="section icon-sec">
             <div class="wrapper icon-sec__block">
                 <div class="icon-sec__container">
                     <a href="#photos" class="icon-sec__link">
                         <span class="icon-sec__icon icon-sec__icon--photos"></span>
-                        <h3 class="font3 icon-sec__heading">Photos</h3>
+
+                        <h3 class="font3 icon-sec__heading">
+                            Photos
+                        </h3>
                     </a>
                     <p class="section__text icon-sec__text">
                         Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
@@ -110,7 +152,10 @@
                 <div class="icon-sec__container">
                     <a href="#about" class="icon-sec__link">
                         <span class="icon-sec__icon icon-sec__icon--about"></span>
-                        <h3 class="font3 icon-sec__heading">About</h3>
+
+                        <h3 class="font3 icon-sec__heading">
+                            About
+                        </h3>
                     </a>
                     <p class="section__text icon-sec__text">
                         Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
@@ -124,7 +169,10 @@
                 <div class="icon-sec__container">
                     <a href="#blog" class="icon-sec__link">
                         <span class="icon-sec__icon icon-sec__icon--blog"></span>
-                        <h3 class="font3 icon-sec__heading">Blog</h3>
+
+                        <h3 class="font3 icon-sec__heading">
+                            Blog
+                        </h3>
                     </a>
                     <p class="section__text icon-sec__text">
                         Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
@@ -135,7 +183,10 @@
                 <div class="icon-sec__container">
                     <a href="#contact" class="icon-sec__link">
                         <span class="icon-sec__icon icon-sec__icon--contact"></span>
-                        <h3 class="font3 icon-sec__heading">Contact Me</h3>
+
+                        <h3 class="font3 icon-sec__heading">
+                            Contact Me
+                        </h3>
                     </a>
                     <p class="section__text icon-sec__text">
                         Lorem ipsum dolor sit, amet consectetur adip elit. Soluta, est magnam. Aliquid, optio?
@@ -145,31 +196,32 @@
                 </div>
             </div>
         </section>
-
+        <!-- Blog section -->
         <section class="section blog-preview">
             <div class="wrapper blog-preview__block">
                 <div class="blog-preview__container-1">
                     <img src="./img/home-image-3.jpg" alt="Photo of surfers in the ocean as the sun goes down" class="blog-preview__img-1">
-                    <!-- <div class="blog-preview__img-1">
-
-                    </div> -->
                 </div>
                 <div class="blog-preview__container-2 blog-preview__container-2--text">
-                    <h3 class="font3">Harper's Travels</h3>
+                    <h3 class="font3">
+                        Harper's Travels
+                    </h3>
                     <p class="section__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
                         tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
                         aspernatur fuga mollitia debitis blanditiis voluptatibus voluptates quisquam repellat
                         perspiciatis recusandae. Iure!
                     </p>
-                    <a href="#" class="section__btn">Read More</a>
-
+                    <a href="#" class="section__btn">
+                        Read More
+                    </a>
                 </div>
-
             </div>
             <div class="wrapper blog-preview__block blog-preview__block--reverse">
                 <div class="blog-preview__container-1 blog-preview__container-1--text">
-                    <h3 class="font3">Favourite Things</h3>
+                    <h3 class="font3">
+                        Favourite Things
+                    </h3>
                     <p class="section__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nemo et
                         tenetur facere ipsam vitae similique beatae, odio distinctio veniam corporis? Possimus
@@ -177,7 +229,9 @@
                         perspiciatis recusandae. Iure!
                     </p>
                     <div class="section__btn-container">
-                        <a href="#" class="section__btn">Read More</a>
+                        <a href="#" class="section__btn">
+                            Read More
+                        </a>
                     </div>
                 </div>
                 <div class="blog-preview__container-2">
@@ -185,14 +239,16 @@
                 </div>
             </div>
         </section>
-
+        <!-- About section -->
         <section class="section harperjourney" id="about">
             <div class="harperjourney__container wrapper">
                 <div class="harperjourney__photo-container">
                     <img src="./img/home-image-5.jpg" alt="Photo of Harper" class="harperjourney__photo">
                 </div>
                 <div class="harperjourney__text-container">
-                    <h2 class="font2">Harper's Journey</h2>
+                    <h2 class="font2">
+                        Harper's Journey
+                    </h2>
                     <p class="section__text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta neque odio dolorem at impedit
                         velit, amet quisquam libero possimus, accusantium dolores ipsum nesciunt eligendi, repellendus
@@ -201,48 +257,53 @@
                         consectetur. Ex tempora accusamus vel doloribus?
                     </p>
 
-                    <a href="#" class="section__btn">Find Out More</a>
-
+                    <a href="#" class="section__btn">
+                        Find Out More
+                    </a>
                 </div>
             </div>
         </section>
+        <!-- Gallery section -->
         <section class="section photos" id="photos">
             <ul class="photos__container wrapper">
                 <li class="photos__item">
-                        <img src="./img/home-image-6.jpg" alt="Photo of pink building" class="photos__photo">
-                        <p class="photos__text">
-                            <a href="#" class="photos__link">
-                                View Pic
-                            </a>
-                        </p>
+                    <img src="./img/home-image-6.jpg" alt="Photo of pink building" class="photos__photo">
+
+                    <p class="photos__text">
+                        <a href="#" class="photos__link">
+                            View Pic
+                        </a>
+                    </p>
                 </li>
                 <li class="photos__item">
                     <img src="./img/home-image-7.jpg" alt="Photo of flying plane" class="photos__photo">
+
                     <p class="photos__text">
-                            <a href="#" class="photos__link">
-                                View Pic
-                            </a>
-                        </p>
+                        <a href="#" class="photos__link">
+                            View Pic
+                        </a>
+                    </p>
                 </li>
                 <li class="photos__item">
-                    <img src="./img/home-image-8.jpg" alt="" class="photos__photo">
+                    <img src="./img/home-image-8.jpg" alt="Photo of purple dye" class="photos__photo">
+
                     <p class="photos__text">
-                            <a href="#" class="photos__link">
-                                View Pic
-                            </a>
-                        </p>
+                        <a href="#" class="photos__link">
+                            View Pic
+                        </a>
+                    </p>
                 </li>
             </ul>
         </section>
     </main>
+    <!-- Footer -->
     <footer class="footer">
         <p class="wrapper footer__text">
             Copyright © 2018 HackerYou
         </p>
     </footer>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="./js/scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="./js/scripts.js"></script>
 
 </body>
 
