Added article tags to the blog page. Also, adjusted media queries

--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
 
                 </aside>
                 <div class="blog__post-container">
-                    <div class="blog__post-box blog__post-box--border">
+                    <article class="blog__post-box blog__post-box--border">
                         <h4 class="font4">
                             My favourite travel destinations
                         </h4>
@@ -205,9 +205,9 @@
                             Eveniet eum praesentium fuga, quos optio dolorem molestias tenetur consectetur ratione
                             impedit aliquam quam quasi minima totam nisi illum excepturi corrupti facere!
                         </p>
+                    </article>
 
-                    </div>
-                    <div class="blog__post-box blog__post-box--author clearfix">
+                    <article class="blog__post-box blog__post-box--author clearfix">
                         <div class="blog__post-img-container">
                             <img src="./img/blog-image-3.jpg" alt="Headshot of Maggie">
                         </div>
@@ -222,9 +222,9 @@
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
                             dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
                         </p>
-                    </div>
+                    </article>
 
-                    <div class="blog__post-box blog__post-box--author blog__post-box--border clearfix">
+                    <article class="blog__post-box blog__post-box--author blog__post-box--border clearfix">
                         <div class="blog__post-img-container">
                             <img src="./img/blog-image-4.jpg" alt="Headshot of Maggie">
                         </div>
@@ -239,7 +239,8 @@
                             eligendi quod quibusdam dolores debitis vel voluptatem distinctio id, obcaecati vitae
                             dolore omnis molestiae perspiciatis! In dignissimos veritatis tempora alias ipsa!
                         </p>
-                    </div>
+                    </article>
+
                     <div class="blog__post-box blog__post-box--form">
                         <form action="#" method="POST" class="blog__post-form">
                             <label class="visuallyhidden" for="email">
